migration-result/docs/ver/14.x/application-access/guides/api-access.mdx
---
title: Access REST APIs With Teleport Application Access
description: How to access REST APIs with Teleport application access.
version: "14.x"
---

The Teleport Application Service can be used to access applications' (REST or
Teleport's own gRPC) APIs with tools like
[curl](https://man7.org/linux/man-pages/man1/curl.1.html) or Postman.

<Note>
  <p>
    **Non-HTTP API Support**
  </p>

  Use [TCP application access](/docs/ver/14.x/application-access/guides/tcp) for non-HTTP APIs (like gRPC).
</Note>

## Prerequisites

<Tabs>
  <Tab title="Teleport Community Edition">
    - A running Teleport cluster. For details on how to set this up, see the
      [Getting Started](/docs/ver/14.x) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 14.3.6.

      See [Installation](/docs/ver/14.x/installation) for details.

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport v14.3.6 git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v14.3.6 go1.21
    Proxy version: 14.3.6
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Team">
    - A Teleport Team account. If you don't have an account, sign
      up to begin your [free trial](https://goteleport.com/signup/).

    - The Enterprise `tctl` admin tool and `tsh` client tool, version >= 14.3.6.

      You can download these tools from the [Cloud Downloads page](/docs/ver/14.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport Enterprise v14.3.6 git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v14.3.6 go1.21
    Proxy version: 14.3.6
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see the Enterprise
      [Getting Started](/docs/ver/14.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >=
      14.3.6.

      You can download these tools by visiting your [Teleport
      account workspace](https://teleport.sh).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport Enterprise v14.3.6 git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v14.3.6 go1.21
    Proxy version: 14.3.6
    Proxy: teleport.example.com
    ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you don't have an account,
      sign up to begin a [free trial](https://goteleport.com/signup/)  of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 14.3.6.

      You can download these tools from the [Cloud Downloads page](/docs/ver/14.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```bash
    $ tctl version
    # Teleport Enterprise v14.3.6 git:api/14.0.0-gd1e081e go1.21
      
    $ tsh version
    # Teleport v14.3.6 go1.21
    Proxy version: 14.3.6
    Proxy: teleport.example.com
    ```
  </Tab>
</Tabs>

- To check that you can connect to your Teleport cluster, sign in with `tsh login`, then
  verify that you can run `tctl` commands using your current credentials.
  `tctl` is supported on macOS and Linux machines.

  For example:
  ```bash
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  14.3.6
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  If you can connect to the cluster and run the `tctl status` command, you can use your
  current credentials to run subsequent `tctl` commands from your workstation.
  If you host your own Teleport cluster, you can also run `tctl` commands on the computer that
  hosts the Teleport Auth Service for full permissions.

- For simplicity's sake, we'll use Grafana running in a
  [Docker container](https://grafana.com/docs/grafana/latest/installation/docker/)
  and execute API queries against it. You can launch Grafana too with a single Docker
  command:

  ```bash
  $ docker run -d -p 3000:3000 grafana/grafana
  ```

  Connect Grafana to your Teleport cluster by adding the following section in
  the Teleport App Service YAML configuration file:

  ```yaml
  app_service:
    enabled: yes
    apps:
    - name: "grafana"
      description: "Test Grafana server"
      uri: "http://localhost:3000"
      labels:
        "env": "dev"
  ```

## Accessing the API

Log into your Teleport cluster and view available applications:

```bash
$ tsh login --proxy=teleport.example.com
$ tsh apps ls

# Application Description         Public Address               Labels
# ----------- ------------------- ---------------------------- -------
# grafana     Test Grafana server grafana.teleport.example.com env=dev
```

Retrieve short-lived X.509 certificate for the application:

```bash
$ tsh apps login grafana
# Logged into app grafana. Example curl command:

$ curl \
  --cert /Users/alice/.tsh/keys/teleport.example.com/alice-app/cluster-name/grafana-x509.pem \
  --key /Users/alice/.tsh/keys/teleport.example.com/alice \
  https://grafana.teleport.example.com:3080
```

The login message shows an example `curl` command you can run to call the
target application's API through Teleport App Access.

<Note>
  <p>
    **CA and Key Pair Files**
  </p>

  Note the paths to your user's certificate/key pair in the command - `curl` will use a client certificate to authenticate with Teleport.

  The Teleport Proxy Service is usually configured with a wildcard certificate
  issued by a public certificate authority such as Let's Encrypt. If you are
  running a self-hosted Teleport cluster, and your Teleport Proxy Service has
  been configured to use a self-signed certificate instead, you will need to
  include it in your `curl` command using `--cacert <path>`.
</Note>

As Grafana's API requires authentication, let's update the `curl` command to
provide basic auth information using default Grafana username/password and
call its `/api/users` endpoint:

```bash
$ curl --user admin:admin \
  --cert /Users/alice/.tsh/keys/teleport.example.com/alice-app/cluster-name/grafana-x509.pem \
  --key /Users/alice/.tsh/keys/teleport.example.com/alice \
    https://grafana.teleport.example.com:3080/api/users

# [{"id":1,"name":"","login":"admin","email":"admin@localhost","avatarUrl":"/avatar/46d229b033af06a191ff2267bca9ae56","isAdmin":true,"isDisabled":false,"lastSeenAt":"2021-03-18T17:25:59Z","lastSeenAtAge":"\u003c 1m","authLabels":[]}]
```

The app's X.509 certificate will expire on its own after the TTL allowed by
your user's role. You can also remove it explicitly:

```bash
$ tsh apps logout
# Logged out of app "grafana"
```

## Application information

```bash
$ tsh apps config
```

shows current app URI and paths to the secrets.

This is useful when configuring CLI tools (such as `curl`) or GUI tools (such as Postman).

Let's print the app information in a table format:

```bash
$ tsh apps config

# Name:      grafana
# URI:       https://grafana.teleport.example.com:3080
# CA:        /Users/alice/.tsh/keys/teleport.example.com/certs.pem
# Cert:      /Users/alice/.tsh/keys/teleport.example.com/alice-app/cluster-name/grafana-x509.pem
# Key:       /Users/alice/.tsh/keys/teleport.example.com/alice
```

We can also provide different `--format` values to print specific parts
of the app configuration:

```bash
$ tsh apps config --format=uri
# https://grafana-root.gravitational.io:3080

$ tsh apps config --format=ca
# /Users/alice/.tsh/keys/teleport.example.com/certs.pem

$ tsh apps config --format=cert
# /Users/alice/.tsh/keys/teleport.example.com/alice-app/cluster-name/grafana-x509.pem

$ tsh apps config --format=key
# /Users/alice/.tsh/keys/teleport.example.com/alice
```

This can be useful in automation for simple templating e.g. to construct an
appropriate `curl` command. Using our Grafana `/api/users` example above:

```bash
$ curl --user admin:admin \
  --cert $(tsh apps config --format=cert) \
  --key $(tsh apps config --format=key) \
    $(tsh apps config --format=uri)/api/users
```
